tests/ui/error-codes/E0092.stderr
error[E0092]: unrecognized atomic operation function: `foo`
  --> $DIR/E0092.rs:4:11
   |
LL | unsafe fn atomic_foo();
   |           ^^^^^^^^^^ unrecognized atomic operation

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0092`.
